fix x node computation
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>